@@ -1,3 +1,9 @@
+2003-05-07  Jeff Johnston  <jjohnstn@redhat.com>
+ 
+ 	* dwarf2read.c (dwarf_decode_lines): Only use output of 
+	check_cu_functions() when calling record_line().  Do not update 
+	the current address.
+
 2003-05-07  Andrew Cagney  <cagney@redhat.com>
 
 	* fork-child.c (startup_inferior): Delete #ifdef STARTUP_INFERIOR
